# ot-harjoitusty-

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md  vaatimusmäärittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: maksukortti_test.py
src/: dimple.py  index.py
