[tool.poetry]
name = "Meili"
version = "0.1.0"
description = "Ohjelmistotekniikan harjoitustyö 2021"
authors = ["Sampo Laurila <sampo.laurila@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
