[tool.poetry]
name = "Meili"
version = "0.1.0"
description = "Ohjelmistotekniikan harjoitustyö 2021"
authors = ["Sampo Laurila <sampo.laurila@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.5.0"
Cython = "^0.29.22"
numpy = "^1.20.2"
geopandas = "^0.9.0"
bokeh = "^2.3.1"
ipython = "^7.22.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
